Fix calculator overflow and layout at 1024px breakpoint

--- a/src/pages/posPage.css
+++ b/src/pages/posPage.css
@@ -1,11 +1,67 @@
 @media screen and (max-width: 1024px) {
+  .col-lg-8 {
+    flex: 0 0 58%;
+    max-width: 58%;
+  }
+
+  .col-lg-4:not(.col-lg-8 .col-lg-4) {
+    flex: 0 0 42%;
+    max-width: 42%;
+  }
+
+  .col-lg-8 .row .col-lg-4 {
+    flex: 0 0 45%;
+    max-width: 45%;
+  }
+
   .container-calculator {
     margin-top: 0.3rem !important;
     margin-left: 0 !important;
+    margin-right: 0 !important;
+    max-width: 100%;
+    padding-left: 1.3rem !important;
+    padding-right: 1.3rem !important;
+    box-sizing: border-box;
+  }
+
+  .calculator.container {
+    padding-left: 0;
+    padding-right: 0;
+    max-width: 100%;
+    box-sizing: border-box;
   }
 
   .container {
     margin-top: 2.6rem !important;
+  }
+
+  .table {
+    width: 100% !important;
+    max-width: 100%;
+    overflow-x: auto;
+    display: block;
+  }
+
+  .cart-title,
+  td,
+  span,
+  .btn-print {
+    font-size: 0.75rem !important;
+  }
+
+  .total-amount {
+    padding-left: 0.5rem !important;
+    padding-right: 0.5rem !important;
+  }
+
+  .print-container {
+    padding-left: 0.5rem !important;
+    padding-right: 0.5rem !important;
+  }
+
+  .btn-danger {
+    font-size: 0.6rem !important;
+    padding: 0.25rem 0.4rem !important;
   }
 }
 
